# daimyo

./: .bowerrc  .gitignore  .psci  LICENSE  Makefile.purescript  README.md  bower.json  daimyo.cabal  package.json
Bio/: Jump.csv  Nap.csv  Run.csv  (+3 more)
Haskell/: .gitignore  Daimyo.cabal  Makefile  info  todo.md
Haskell/Courses/CIS194/test/: CIS194L01Spec.hs
Haskell/Sites/HR/Challenges/TestCases/: counter-game.19.txt  counter-game.19.txt.out  counter-game.2.txt.out
Haskell/Sites/HR/Contests/lambda-calculi-oct14/: colors.nfo  expression.hs  expressions.nfo  ordered.hs  prefix-compression-optimized.hs  prefix-compression.hs  prime-captain.hs  prime-captain.nfo  shunting.2.hs  shunting.3.hs
Haskell/src/: Daimyo.hs
Haskell/src/Daimyo/: Algebra.hs  BaseTree.hs  Bits.hs  Boxes.hs  Calculus.hs  CategoryTheory.hs  Chess.hs  DMoz.hs  Delrik.hs  Desugar.hs  Geometry.hs  Input.hs  Matrix.hs  Number.hs  Print.hs  ProbabilityTheory.hs  Queue.hs  Quiz.hs  Random.hs  Set.hs  SetTheory.hs  Stack.hs  State.hs  Statistics.hs  String.hs  Time.hs
Haskell/src/Daimyo/AbstractAlgebra/: Polynomial.hs
Haskell/src/Daimyo/Algebra/: Congruence.hs  Divisibility.hs  Exponent.hs  Expression.hs  Fraction.hs  GCD.hs  Graphs.hs  LCM.hs  Logarithms.hs  NthRoot.hs  RepeatedDecimal.hs
Haskell/src/Daimyo/Algebra/Congruence/: Clock.hs  Solving.hs
Haskell/src/Daimyo/Algebra/Divisibility/: Common.hs  Examples.hs
Haskell/src/Daimyo/Algebra/Permutation/: Cycle.hs
Haskell/src/Daimyo/Algebra/Quiz/: ASMD.hs  GCD.hs
Haskell/src/Daimyo/Algorithm/: Growth.hs
Haskell/src/Daimyo/Algorithm/BottomUp/: Dynamic.hs
Haskell/src/Daimyo/Algorithm/Examples/: Coins.hs  Hanoi.hs  USChange.hs
Haskell/src/Daimyo/Algorithm/Growth/: Detective.hs
Haskell/src/Daimyo/Algorithm/Network/: ProcessNetwork.hs
Haskell/src/Daimyo/Algorithm/TopDown/: BacktrackSearch.hs  DivideAndConquer.hs  GreedySearch.hs  PriorityFirstSearch.hs
Haskell/src/Daimyo/Application/Todo/: Simple.hs
Haskell/src/Daimyo/Athletics/: Run.hs
Haskell/src/Daimyo/Calculus/: Exercises.hs  Limit.hs
Haskell/src/Daimyo/Combinatorics/: Combination.hs  Examples.hs  Permutation.hs
Haskell/src/Daimyo/ConcreteMathematics/: Recurrences.hs  Sums.hs
Haskell/src/Daimyo/Control/: Monad.hs  State.hs
Haskell/src/Daimyo/Crypto/: Frequency.hs
Haskell/src/Daimyo/Delrik/CIS194/: README.md
Haskell/src/Daimyo/Delrik/p.euler/: 1.hs  2.hs  4.hs  5.hs  8.hs  collatz-chain.hs  consequtive-prods.hs  lookup-key.hs  numbers.block
Haskell/src/Daimyo/Encoding/: Base64.hs
Haskell/src/Daimyo/Encryption/: Transposition.hs
Haskell/src/Daimyo/EquationalReasoning/: Prelude.hs
Haskell/src/Daimyo/Expressions/: IncDec.hs
Haskell/src/Daimyo/Fun/: Alphabet.hs  Binary.hs
Haskell/src/Daimyo/GEB/: MIU.hs
Haskell/src/Daimyo/Game/: Checkers.hs  Chess.hs  TileN.hs
Haskell/src/Daimyo/Geometry/: Line.hs  Pythagorean.hs  Triangle.hs
Haskell/src/Daimyo/Geometry/Quiz/: Pythagorean.hs
Haskell/src/Daimyo/Graph/: AdjacencyList.hs  AdjacencyMatrix.hs  Array.hs
Haskell/src/Daimyo/Graph/Array/: Examples.hs
Haskell/src/Daimyo/Graphs/: Circles.hs  T1.hs
Haskell/src/Daimyo/GroupTheory/: Tables.hs
Haskell/src/Daimyo/Heap/: Leftist.hs
Haskell/src/Daimyo/Lib/: BaseTree.hs  Bits.hs  DMoz.hs  Desugar.hs  Input.hs  Queue.hs  Random.hs  Set.hs  Stack.hs  State.hs  Time.hs
Haskell/src/Daimyo/Lib/Encryption/: Transposition.hs
Haskell/src/Daimyo/List/: Misc.hs  Pattern.hs  Safe.hs
Haskell/src/Daimyo/Logic/: Bool.hs  Examples.hs  Table.hs
Haskell/src/Daimyo/Math/: Base.hs  Factorial.hs  Powers.hs  Tables.hs
Haskell/src/Daimyo/Measure/: Metric.hs
Haskell/src/Daimyo/NumberTheory/: .Prime.hs.swo  Abundant.hs  Aliquot.hs  Benford.hs  Bernoulli.hs  Binet.hs  Brier.hs  Consecutive.hs  ContinuedFraction.hs  Demlo.hs  Even.hs  Factor.hs  Factorial.hs  Fibonacci.hs  GCD.hs  GoldenRatio.hs  Log.hs  Lucas.hs  MagicSquare.hs  Nines.hs  Perfect.hs  Prime.hs  Riesel.hs  Sierpinski.hs  Square.hs  TheoremOfMathematics.hs
Haskell/src/Daimyo/Optimizations/: List.hs  Tree.hs
Haskell/src/Daimyo/Patterns/: Palindrome.hs
Haskell/src/Daimyo/Pearls/: SmallestFreeNumber.hs
Haskell/src/Daimyo/Permutation/: Heaps.hs
Haskell/src/Daimyo/Proof/: Basic.hs  KnowShow.hs
Haskell/src/Daimyo/Pure/: Prelude.hs
Haskell/src/Daimyo/Queue/: Burton.hs  List.hs  Naive.hs
Haskell/src/Daimyo/Servant/: API.hs  Shared.hs
Haskell/src/Daimyo/Set/: Bit.hs  Naive.hs
Haskell/src/Daimyo/Sorting/: OddEven.hs
Haskell/src/Daimyo/Stack/: List.hs  Naive.hs
Haskell/src/Daimyo/Table/: Array.hs
Haskell/src/Daimyo/Tree/: AVL.hs  AVLKV.hs  BST.hs  BaseTree.hs  Misc.hs  Node.hs  Segment.hs
Haskell/src/Daimyo/Wreq/: Todo.hs
Haskell/src/Daimyo/backups/: OddEven.hs
Read/: Read.cabal
Read/ConcreteMathematics/RecurrentProblems/: Hanoi.ml  Josephus.hs  LinesInThePlane.hs
Read/DiscreteMathematicsUsingAComputer/C1.Intro/: C1.hs
Read/DiscreteMathematicsUsingAComputer/C3.Recursion/: C3.hs  C3.ml
Read/DiscreteMathematicsUsingAComputer/C4.Induction/: C4.hs
Read/Discrete_Mathematics_Using_a_Computer/C1.Intro/: C1.ml
Read/FPComplete/UnderstandingYoneda/: Haskell.hs
Read/Gonzalez/: CategoryDesignPattern.hs  Desugar.hs  EquationalReasoning.hs  FunctorDesignPattern.hs  ScrapYourTypeClasses.hs
Read/Kategori/: Kategori.hs
Read/LambdaCalculus/Misc/: Haskell.hs
Read/OCamlUnix/Generalities/: Makefile  echo  echo.c  echo.hs  echo.ml  echo.sbt  echo.scala  echo2.ml  try_finalize.hs  try_finalize.ml
Read/PearlsOfFunctionalAlgorithmDesign/: SmallestFreeNumber.hs
Read/PropLog/: Haskell.hs
Read/PropLog/Min/: Haskell.hs
Read/WChen/Algebra/: BasicAlgebra.hs
Read/Wiki/Bernoulli/: Haskell.hs
Read/Wiki/Binomial/: Haskell.hs
Read/Wiki/E/: Haskell.hs
c/: .gitignore  Makefile.am  configure.ac
c/include/: Makefile.am  daimyo.h
c/include/io/: hello.h
c/include/prim/: bool.h
c/lib/: Makefile.am  daimyo.c
c/lib/io/: hello.c
c/lib/prim/: bool.c
c/scripts/: bootstrap.sh  deps.sh
c/tests/: .gitignore  Makefile.am  main.c  test_prim_bool.c  test_prim_bool.h
haskell/courses/CIS194/: cis194.cabal
(+1439 files in other folders)
