Name:       Daimyo
Version:    0.1
Author:     andrew.darqui@gmail.com
Maintainer:     andrew.darqui@gmail.com
Synopsis:   Daimyo
Description:    Daimyo
Category:   Daimyo
Build-Type: Simple
Cabal-Version:  >= 1.8
tested-with:    GHC == 7.6.2
extra-source-files: README.md

Source-Repository head
 Type:               git
 Location:           https://github.com/adarqui/Daimyo

Library
 HS-Source-Dirs:     src
 Exposed-Modules:    Daimyo
                     Daimyo.Random
                     Daimyo.String
                     Daimyo.Number
                     Daimyo.Knowledge.Time
                     Daimyo.Input
                     Daimyo.List.Safe
                     Daimyo.List.Single
                     Daimyo.List.Misc
                     Daimyo.List.Pattern
                     Daimyo.Stack
                     Daimyo.Queue,
                     Daimyo.Tree.Node
                     Daimyo.Tree.BST
                     Daimyo.Tree.Interval
                     Daimyo.Tree.Segment
                     Daimyo.Tree.Rose
                     Daimyo.Tree.Misc
                     Daimyo.Tree.Instances.Node
                     Daimyo.Tree.Instances.BST
                     Daimyo.Measure.Time
                     Daimyo.Measure.Metric
                     Daimyo.Measure.Bandwidth
                     Daimyo.Set
                     Daimyo.Bits
                     Daimyo.Math.Primes
                     Daimyo.Math.Powers
                     Daimyo.Math.Table.Power
                     Daimyo.Math.Table.NthRoot
                     Daimyo.Math.Factorial
                     Daimyo.Math.Base
                     Daimyo.Math.Mean.Arithmetic
                     Daimyo.Math.Mean.Harmonic
                     Daimyo.Math.Mean.Geometric
                     Daimyo.Math.Mean.Generalized
                     Daimyo.Sorting.Insert
                     Daimyo.Sorting.OddEven
                     Daimyo.Encryption.Transposition
                     Daimyo.Permutation.Heaps
                     Daimyo.Fun.Binary
                     Daimyo.Fun.Alphabet
                     Daimyo.Desugar
                     Daimyo.Patterns.Palindrome
                     Daimyo.Expressions.ShuntingYard
                     Daimyo.Expressions.BoolTree
                     Daimyo.Expressions.IncDec
                     Daimyo.State
                     Daimyo.DMoz
                     Daimyo.Delrik
                     Daimyo.Print
                     Daimyo.Logic.Proposition
                     Daimyo.Logic.Table
                     Daimyo.Logic.Examples
                     Daimyo.Algebra
                     Daimyo.Algebra.Exponent
                     Daimyo.Algebra.Logarithms
                     Daimyo.Algebra.Graphs
                     Daimyo.Algebra.Expression
                     Daimyo.Algebra.Fraction
                     Daimyo.Algebra.Congruence
                     Daimyo.Algebra.Congruence.Clock
                     Daimyo.Algebra.Congruence.Solving
                     Daimyo.Algebra.Divisibility
                     Daimyo.Algebra.Divisibility.Common
                     Daimyo.Algebra.Divisibility.Examples
                     Daimyo.Algebra.LCM
                     Daimyo.Algebra.GCD
                     Daimyo.Algebra.NthRoot
                     Daimyo.Algebra.RepeatedDecimal
                     Daimyo.Algebra.Permutation.Cycle
                     Daimyo.Algebra.Quiz.GCD
                     Daimyo.Algebra.Quiz.LCM
                     Daimyo.Algebra.Quiz.ASMD
                     Daimyo.LinearAlgebra.Quiz.Problems
                     Daimyo.LinearAlgebra.Other.GaussJordan
                     Daimyo.Geometry
                     Daimyo.Geometry.Point
                     Daimyo.Geometry.Line
                     Daimyo.Geometry.Triangle
                     Daimyo.Geometry.Pythagorean
                     Daimyo.Geometry.Quiz.Pythagorean
                     Daimyo.Matrix
                     Daimyo.SetTheory
                     Daimyo.GroupTheory
                     Daimyo.GroupTheory.Tables
                     Daimyo.CategoryTheory
                     Daimyo.Statistics
                     Daimyo.Statistics.Exercises
                     Daimyo.ProbabilityTheory
                     Daimyo.NumberTheory.Prime
                     Daimyo.NumberTheory.Prime.Primes
                     Daimyo.NumberTheory.Prime.Semiprime
                     Daimyo.NumberTheory.Prime.Wilson
                     Daimyo.NumberTheory.Prime.Fermat
                     Daimyo.NumberTheory.Prime.Average
                     Daimyo.NumberTheory.Prime.Additive
                     Daimyo.NumberTheory.Prime.Bertrand
                     Daimyo.NumberTheory.Prime.Almost
                     Daimyo.NumberTheory.Prime.Carol
                     Daimyo.NumberTheory.Prime.Centered
                     Daimyo.NumberTheory.Prime.Chen
                     Daimyo.NumberTheory.Prime.Circular
                     Daimyo.NumberTheory.Prime.Cousin
                     Daimyo.NumberTheory.Prime.Cullen
                     Daimyo.NumberTheory.Prime.Distance
                     Daimyo.NumberTheory.Prime.Mersenne
                     Daimyo.NumberTheory.Prime.SophieGermain
                     Daimyo.NumberTheory.Prime.CunninghamChain
                     Daimyo.NumberTheory.Prime.Twin
                     Daimyo.NumberTheory.Abc
                     Daimyo.NumberTheory.Abundant
                     Daimyo.NumberTheory.Aliquot
                     Daimyo.NumberTheory.Benford
                     Daimyo.NumberTheory.Bernoulli
                     Daimyo.NumberTheory.Bernoulli.BigFloat
                     Daimyo.NumberTheory.Perfect
                     Daimyo.NumberTheory.Euler
                     Daimyo.NumberTheory.Factor
                     Daimyo.NumberTheory.Factorial
                     Daimyo.NumberTheory.GCD
                     Daimyo.NumberTheory.GCD.Analysis
                     Daimyo.NumberTheory.TheoremOfMathematics
                     Daimyo.NumberTheory.Nines
                     Daimyo.NumberTheory.Fermat
                     Daimyo.NumberTheory.Constants.E
                     Daimyo.NumberTheory.Constants.Pi
                     Daimyo.NumberTheory.Constants.Brun
                     Daimyo.NumberTheory.Riesel
                     Daimyo.NumberTheory.Sierpinski
                     Daimyo.NumberTheory.Brier
                     Daimyo.NumberTheory.Consecutive
                     Daimyo.NumberTheory.Fibonacci
                     Daimyo.NumberTheory.Binet
                     Daimyo.NumberTheory.Lucas
                     Daimyo.NumberTheory.GoldenRatio
                     Daimyo.NumberTheory.MagicSquare
                     Daimyo.NumberTheory.Demlo
                     Daimyo.NumberTheory.Gamma
                     Daimyo.Combinatorics
                     Daimyo.Combinatorics.Examples
                     Daimyo.Combinatorics.Permutation
                     Daimyo.Combinatorics.Combination
                     Daimyo.AbstractAlgebra.Polynomial
                     Daimyo.Calculus
                     Daimyo.Calculus.Limit
                     Daimyo.ConcreteMathematics.Sums
                     Daimyo.ConcreteMathematics.Recurrences
                     Daimyo.Proof.Basic
                     Daimyo.Proof.KnowShow
                     Daimyo.Proof.Exercises.Misc
--                     Daimyo.Graphs.Circles
--                     Daimyo.Graphs.T1
                     Daimyo.Algorithm.Growth
                     Daimyo.Crypto.Frequency
                     Daimyo.Pearls.SmallestFreeNumber
                     Daimyo.PSS.C1.E1
                     Daimyo.PSS.C1.E2
                     Daimyo.GEB.MIU
                     Daimyo.Boxes
                     Daimyo.Game.Chess
                     Daimyo.Game.Checkers
                     Daimyo.Security.Stanford
                     Daimyo.Quiz
                     Daimyo.Athletics.Run
 Build-Depends:      base == 4.*, bytestring, matrix, vector, containers, AC-Angle, binary, random, array, mtl, text, statistics, time, hatt, boxes, scotty, numbers, gamma
-- diagrams, diagrams-core, diagrams-svg, diagrams-lib, Chart-diagrams, constructive-algebra
 GHC-Options:        -Wall
