Name:                Daimyo
Version:             0.1
Author:              andrew.darqui@gmail.com
Maintainer:          andrew.darqui@gmail.com
Synopsis:            Daimyo
Description:         Daimyo
license:             MIT
license-file:        LICENSE
Category:            Daimyo
Build-Type:          Simple
Cabal-Version:       >= 1.8
tested-with:         GHC == 7.6.2
extra-source-files:  README.md

Source-Repository head
 Type:               git
 Location:           https://github.com/adarqui/Daimyo

Library
 HS-Source-Dirs:     src
 Exposed-Modules:    Daimyo
                     Daimyo.Random
                     Daimyo.String
                     Daimyo.Number
                     Daimyo.Knowledge.Time
                     Daimyo.Input
                     Daimyo.EquationalReasoning.Prelude
                     Daimyo.EquationalReasoning.Data.List.Permutations
                     Daimyo.EquationalReasoning.Data.List.Span
                     Daimyo.Graph.AdjacencyList
                     Daimyo.Graph.AdjacencyMatrix
                     Daimyo.Graph.Array
                     Daimyo.Graph.Array.Examples
                     Daimyo.List.Safe
                     Daimyo.List.Single
                     Daimyo.List.Misc
                     Daimyo.List.Pattern
                     Daimyo.Stack.Naive
                     Daimyo.Stack.List
                     Daimyo.Queue.Naive,
                     Daimyo.Queue.List,
                     Daimyo.Queue.Burton,
                     Daimyo.Queue.PriorityQueue.List
                     Daimyo.Queue.PriorityQueue.LeftistHeap
                     Daimyo.Queue.PriorityQueue.SeverityLists
                     Daimyo.Tree.AVL
                     Daimyo.Tree.AVLKV
                     Daimyo.Tree.BaseTree
                     Daimyo.Tree.Node
                     Daimyo.Tree.Node.Dups
                     Daimyo.Tree.BST
                     Daimyo.Tree.Interval
                     Daimyo.Tree.Segment
                     Daimyo.Tree.Rose
                     Daimyo.Tree.Misc
                     Daimyo.Tree.Instances.Node
                     Daimyo.Tree.Instances.BST
                     Daimyo.Heap.Leftist
                     Daimyo.Optimizations
                     Daimyo.Optimizations.List
                     Daimyo.Optimizations.Tree
                     Daimyo.Measure.Time
                     Daimyo.Measure.Metric
                     Daimyo.Measure.Bandwidth
                     Daimyo.Set.Bit
                     Daimyo.Set.Bits
                     Daimyo.Set.List
                     Daimyo.Set.NodeTree
                     Daimyo.Set.Naive
                     Daimyo.Table.Array
                     Daimyo.Table.List
                     Daimyo.Table.Naive
                     Daimyo.Bits
                     Daimyo.Math.Primes
                     Daimyo.Math.Powers
                     Daimyo.Math.Table.Power
                     Daimyo.Math.Table.NthRoot
                     Daimyo.Math.Factorial
                     Daimyo.Math.Base
                     Daimyo.Math.Mean.Arithmetic
                     Daimyo.Math.Mean.Harmonic
                     Daimyo.Math.Mean.Geometric
                     Daimyo.Math.Mean.Generalized
                     Daimyo.Sorting.Insert
                     Daimyo.Sorting.OddEven
                     Daimyo.Sorting.HeapSort.List
                     Daimyo.Sorting.HeapSort.Tree
                     Daimyo.Sorting.InsertionSort.Fold
                     Daimyo.Sorting.InsertionSort.Naive
                     Daimyo.Sorting.MergeSort.Naive
                     Daimyo.Sorting.MergeSort.DivideAndConquer
                     Daimyo.Sorting.Radix.Array
                     Daimyo.Sorting.SelectionSort.Naive
                     Daimyo.Sorting.QuickSort.Naive
                     Daimyo.Sorting.TreeSort.Node
                     Daimyo.Encryption.Transposition
                     Daimyo.Permutation.Heaps
                     Daimyo.Fun.Binary
                     Daimyo.Fun.Alphabet
                     Daimyo.Desugar
                     Daimyo.Patterns.Palindrome
                     Daimyo.Expressions.ShuntingYard
                     Daimyo.Expressions.BoolTree
                     Daimyo.Expressions.IncDec
                     Daimyo.State
                     Daimyo.DMoz
                     Daimyo.Delrik
                     Daimyo.Print
                     Daimyo.Logic.Proposition
                     Daimyo.Logic.Table
                     Daimyo.Logic.Examples
                     Daimyo.Logic.Bool
                     Daimyo.Algebra
                     Daimyo.Algebra.Exponent
                     Daimyo.Algebra.Logarithms
                     Daimyo.Algebra.Graphs
                     Daimyo.Algebra.Expression
                     Daimyo.Algebra.Fraction
                     Daimyo.Algebra.Congruence
                     Daimyo.Algebra.Congruence.Clock
                     Daimyo.Algebra.Congruence.Solving
                     Daimyo.Algebra.Divisibility
                     Daimyo.Algebra.Divisibility.Common
                     Daimyo.Algebra.LCM
                     Daimyo.Algebra.GCD
                     Daimyo.Algebra.NthRoot
                     Daimyo.Algebra.Permutation.Cycle
                     Daimyo.Algebra.Quiz.GCD
                     Daimyo.Algebra.Quiz.LCM
                     Daimyo.Algebra.Quiz.ASMD
                     Daimyo.LinearAlgebra.Quiz.Problems
                     Daimyo.LinearAlgebra.Other.GaussJordan
                     Daimyo.Geometry
                     Daimyo.Geometry.Point
                     Daimyo.Geometry.Line
                     Daimyo.Geometry.Triangle
                     Daimyo.Geometry.Pythagorean
                     Daimyo.Geometry.Quiz.Pythagorean
                     Daimyo.Matrix
                     Daimyo.SetTheory
                     Daimyo.GroupTheory
                     Daimyo.GroupTheory.Tables
                     Daimyo.CategoryTheory
                     Daimyo.Statistics
                     Daimyo.Statistics.Exercises
                     Daimyo.ProbabilityTheory
                     Daimyo.ProbabilityTheory.Birthday
                     Daimyo.NumberTheory.Prime
                     Daimyo.NumberTheory.Prime.Primes
                     Daimyo.NumberTheory.Prime.Semiprime
                     Daimyo.NumberTheory.Prime.Wilson
                     Daimyo.NumberTheory.Prime.Fermat
                     Daimyo.NumberTheory.Prime.Average
                     Daimyo.NumberTheory.Prime.Additive
                     Daimyo.NumberTheory.Prime.Bertrand
                     Daimyo.NumberTheory.Prime.Almost
                     Daimyo.NumberTheory.Prime.Carol
                     Daimyo.NumberTheory.Prime.Centered
                     Daimyo.NumberTheory.Prime.Chen
                     Daimyo.NumberTheory.Prime.Circular
                     Daimyo.NumberTheory.Prime.Cousin
                     Daimyo.NumberTheory.Prime.Cullen
                     Daimyo.NumberTheory.Prime.Distance
                     Daimyo.NumberTheory.Prime.Mersenne
                     Daimyo.NumberTheory.Prime.SophieGermain
                     Daimyo.NumberTheory.Prime.CunninghamChain
                     Daimyo.NumberTheory.Prime.Twin
                     Daimyo.NumberTheory.Log
                     Daimyo.NumberTheory.Log.Gap
                     Daimyo.NumberTheory.Abc
                     Daimyo.NumberTheory.Abundant
                     Daimyo.NumberTheory.Aliquot
                     Daimyo.NumberTheory.Benford
                     Daimyo.NumberTheory.Bernoulli
                     Daimyo.NumberTheory.Bernoulli.BigFloat
                     Daimyo.NumberTheory.Perfect
                     Daimyo.NumberTheory.Euler
                     Daimyo.NumberTheory.Factor
                     Daimyo.NumberTheory.Factorial
                     Daimyo.NumberTheory.GCD
                     Daimyo.NumberTheory.GCD.Analysis
                     Daimyo.NumberTheory.TheoremOfMathematics
                     Daimyo.NumberTheory.Nines
                     Daimyo.NumberTheory.Fermat
                     Daimyo.NumberTheory.Constants.E
                     Daimyo.NumberTheory.Constants.Pi
                     Daimyo.NumberTheory.Constants.Brun
                     Daimyo.NumberTheory.Riesel
                     Daimyo.NumberTheory.Sierpinski
                     Daimyo.NumberTheory.Brier
                     Daimyo.NumberTheory.Consecutive
                     Daimyo.NumberTheory.Fibonacci
                     Daimyo.NumberTheory.Fibonacci.Array
                     Daimyo.NumberTheory.Binet
                     Daimyo.NumberTheory.Lucas
                     Daimyo.NumberTheory.GoldenRatio
                     Daimyo.NumberTheory.MagicSquare
                     Daimyo.NumberTheory.Demlo
                     Daimyo.NumberTheory.Gamma
                     Daimyo.NumberTheory.ContinuedFraction
                     Daimyo.NumberTheory.ContinuedFraction.Constant
                     Daimyo.NumberTheory.Odd
                     Daimyo.NumberTheory.Even
                     Daimyo.NumberTheory.Square
                     Daimyo.Combinatorics
                     Daimyo.Combinatorics.Examples
                     Daimyo.Combinatorics.Permutation
                     Daimyo.Combinatorics.Combination
                     Daimyo.AbstractAlgebra.Polynomial
                     Daimyo.Calculus
                     Daimyo.Calculus.Limit
                     Daimyo.ConcreteMathematics.Sums
                     Daimyo.ConcreteMathematics.Recurrences
                     Daimyo.Proof.Basic
                     Daimyo.Proof.KnowShow
                     Daimyo.Proof.Exercises.Misc
--                     Daimyo.Graphs.Circles
--                     Daimyo.Graphs.T1
                     Daimyo.Algorithm.Growth
                     Daimyo.Algorithm.Growth.Detective
                     Daimyo.Algorithm.Examples.USChange
                     Daimyo.Algorithm.Examples.Hanoi
                     Daimyo.Algorithm.TopDown.DivideAndConquer
                     Daimyo.Crypto.Frequency
                     Daimyo.Pearls.SmallestFreeNumber
                     Daimyo.PSS.C1.E1
                     Daimyo.PSS.C1.E2
                     Daimyo.GEB.MIU
                     Daimyo.Boxes
                     Daimyo.Game.Chess
                     Daimyo.Game.Checkers
                     Daimyo.Security.Stanford
                     Daimyo.Quiz
                     Daimyo.Athletics.Run
 Build-Depends:      base == 4.*, bytestring, matrix, vector, containers, AC-Angle, binary, random, array, mtl, text, statistics, time, hatt, boxes, scotty, numbers, gamma
 GHC-Options:        -Wall
