Name:       Daimyo-Read
Version:    0.1
Author:     andrew.darqui@gmail.com
Maintainer:     andrew.darqui@gmail.com
Synopsis:   Daimyo-Read
Description:    Daimyo-Read
Category:   Daimyo
Build-Type: Simple
Cabal-Version:  >= 1.8
tested-with:    GHC == 7.6.2
extra-source-files: README.md

Source-Repository head
 Type:               git
 Location:           https://github.com/adarqui/Daimyo

Library
 HS-Source-Dirs:     ./
 Exposed-Modules:    
                    Wiki.E.Haskell
                    Wiki.Bernoulli.Haskell
                    Wiki.Binomial.Haskell
                    WChen.Algebra.BasicAlgebra
                    LambdaCalculus.Misc.Haskell
                    PropLog.Haskell
                    PropLog.Min.Haskell
 Build-Depends:      base == 4.*
 GHC-Options:        -Wall
