name:                CIS194
version:             0.1.0
synopsis:            CIS194
description:         CIS194
homepage:            https://github.com/adarqui/toybox
license:             MIT
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
category:            Experimental
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:
    Courses.CIS194.L01
    Courses.CIS194.L02
  build-depends:
                     base >=4.7 && <4.8
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  ghc-options:      -Wall -Werror
  main-is:          Spec.hs
  build-depends:    base
                  , hspec >= 1.3
                  , hspec-core >= 2.1.7
                  , QuickCheck
                  , CIS194 == 0.1.0
